test/commands/scan/bindings/out.txt
Loading policies ...
Loading bindings ...
- foo -> bar
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- PASSED (POLICY=test, RULE=foo-bar-4)
Done
